--- a/exercise friend/helper.html
+++ b/exercise friend/helper.html
@@ -72,7 +72,7 @@
 		data.forEach(item => {
 			
 			const groupName = item.group;
-			console.log(groupCheckboxes[groupname]);
+			console.log(groupCheckboxes[groupName]);
 
 			if (!groupCheckboxes[groupName]) {
 				
