--- a/exercise friend/helper.html
+++ b/exercise friend/helper.html
@@ -131,6 +131,8 @@
 			groupCheckboxes[groupName].content.appendChild(stretchLabel);
 			groupCheckboxes[groupName].content.appendChild(document.createElement('br'));
 			
+			console.log(groupCheckboxes[groupName.content]);
+			
 		});
 	}
 	
