--- a/exercise friend/helper.html
+++ b/exercise friend/helper.html
@@ -131,7 +131,7 @@
 			groupCheckboxes[groupName].content.appendChild(stretchLabel);
 			groupCheckboxes[groupName].content.appendChild(document.createElement('br'));
 			
-			console.log(groupCheckboxes[groupName.content]);
+			console.log(groupCheckboxes[groupCheckboxes[groupName].content]);
 			
 		});
 	}
