--- a/exercise friend/helper.html
+++ b/exercise friend/helper.html
@@ -73,6 +73,9 @@
 			
 			const groupName = item.group;
 			console.log(item.group);
+			console.log(groupName);
+			console.log(groupCheckboxes);
+			console.log(groupCheckboxes[groupName]);
 
 			if (groupCheckboxes[groupName] === undefined) {
 				
