--- a/exercise friend/helper.html
+++ b/exercise friend/helper.html
@@ -53,13 +53,13 @@
   fetch('data.tsv')
     .then(response => response.text())
     .then(data => {
-      const lines = data.split('\n').slice(1);
-      const items = lines.map(line => {
-        const [stretch, switchVal, time, reps, group] = line.split('\t');
-        return { stretch, switch: switchVal, time, reps: parseInt(reps), group };
-      });
-      console.log(items);
-	  createElements(items);
+		const lines = data.split('\n').slice(1);
+		  const items = lines.map(line => {
+		    const [stretch, switchVal, time, reps, group] = line.split('\t').map(item => item.replace(/\r/g, ''));
+		    return { stretch, switch: switchVal, time, reps: parseInt(reps), group };
+		  });
+		  console.log(items);
+		  createElements(items);
     })
     .catch(error => console.error('Error fetching the data:', error));
 	
