--- a/exercise friend/helper.html
+++ b/exercise friend/helper.html
@@ -123,6 +123,8 @@
 			stretchCheckbox.dataset.group = groupName;
 			stretchCheckbox.dataset.time = item.time;
 			stretchCheckbox.dataset.switch = item.switchVal;
+			console.log(stretchCheckbox);
+			console.log(item.switchVal);
 
 			const stretchLabel = document.createElement('label');
 			stretchLabel.textContent = item.stretch;
