--- a/exercise friend/helper.html
+++ b/exercise friend/helper.html
@@ -141,7 +141,7 @@
 				triangle.textContent = "▶";
 				
 				triangle.onclick = function() {
-					toggleAccordion(this);
+					toggleAccordion(header);
 				};
 				
 				groupCheckboxes[groupName] = document.createElement('input');
