--- a/exercise friend/helper.html
+++ b/exercise friend/helper.html
@@ -74,10 +74,12 @@
   .triangle {
       margin: 0px 10px;
 	  display:inline-block;
+	  cursor: pointer;
   }
   
   .time{
-	  color:#404030;
+	  color:#757541;
+	  margin: 0px 10px;
   }
   
 </style>
@@ -89,7 +91,7 @@
 		
 		<div style="display:flex;margin-bottom:20px;">
 
-			<button onclick="speak()">speak</button>
+			<button onclick="speak()">⟶ speak</button>
 
 			<audio id="audio" controls>
 			  Your browser does not support the audio element.
@@ -220,6 +222,8 @@
 	}
 	
 	function speak() {
+		document.getElementById("speakButton").textContent = "loading...";
+		
 		var textList = document.querySelectorAll("#stretchList input[type='checkbox']");
 		var ssml = '<speak>';
 		ssml += 'hey. here goes your exercise routine. hope you enjoy it. okay. <break time="1"/>';
@@ -258,6 +262,7 @@
 	        var audioUrl = "data:audio/mp3;base64," + response.audioContent;
 	        document.getElementById("audio").src = audioUrl;
 	        document.getElementById("audio").play();
+			document.getElementById("speakButton").textContent = "⟶ speak";
 	      }
 	    };
 
