--- a/exercise friend/helper.html
+++ b/exercise friend/helper.html
@@ -78,7 +78,7 @@
   }
   
   .time{
-	  color:#757541;
+	  color:#d3c8c3;
 	  margin: 0px 10px;
   }
   
@@ -91,7 +91,7 @@
 		
 		<div style="display:flex;margin-bottom:20px;">
 
-			<button onclick="speak()">⟶ speak</button>
+			<button id="speakButton" onclick="speak()">⟶speak</button>
 
 			<audio id="audio" controls>
 			  Your browser does not support the audio element.
