--- a/exercise friend/helper.html
+++ b/exercise friend/helper.html
@@ -290,6 +290,7 @@
 		});
 
 		ssml += '</speak>';
+		console.log(ssml);
 
 		var xhr = new XMLHttpRequest();
 		var url = "https://texttospeech.googleapis.com/v1/text:synthesize?key=AIzaSyCcCQFbNls8ogpWJTshCm2ZTQLnx1x3tzE";
