--- a/exercise friend/helper.html
+++ b/exercise friend/helper.html
@@ -256,6 +256,8 @@
 			const exercisetime = checkbox.dataset.time;
 			const bothsides = checkbox.dataset.bothsides;
 			const reps = checkbox.dataset.reps;
+			
+			console.log(exercisetime);
 
 			if ((checkbox.dataset.group != undefined) & (checkbox.checked)) {
 
