--- a/index.html
+++ b/index.html
@@ -14,8 +14,11 @@
 	<div>🐕 <a href="mickeygame/mickeyz.html">mickey game</a></div>
 	
 	<div>🎶 <a href="jmix/index.html">jmix</a></div>
+	<div>🎵 <a href="españolmix/index.html">jmix</a></div>
 	
 	<div>⬅️⬆️ <a href="ddr/ddr.html">ddr selection screen</a></div>
+	
+	<div>💪 <a href="exercise friend/friend.html">exercise friend</a></div>
 	
 </body>
 </html>
